--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ before_install:
   - pip --version
 
 install:
+  - curl -O https://bootstrap.pypa.io/get-pip.py
+  - python get-pip.py
+  - rm get-pip.py
   - pip install --upgrade pip
   - pip install pyinstaller
   - pip install cython
