--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - python --version
   - python -c "import sys; print(sys.executable)"
   - curl -O https://bootstrap.pypa.io/get-pip.py
-  - python get-pip.py
+  - sudo -H python get-pip.py
   - rm get-pip.py
   - pip install --upgrade pip
   - pip --version
