--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ before_install:
 install:
   - sudo -H pip install pyinstaller
   - sudo -H pip install cython
-  - sudo -H pip install --pre -U pyocd
+  - sudo -H pip install --pre -U https://github.com/mbedmicro/pyOCD/archive/master.zip
+  #- sudo -H pip install --pre -U pyocd
   #- sudo -H pip install --pre -U git+https://github.com/mbedmicro/pyOCD.git#egg=proj
   #- cd .. && git clone https://github.com/gbishop/cython-hidapi.git && cd ubitflashtool
   #- cd ../cython-hidapi && python setup-mac.py build && cd ../ubitflashtool
