--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,12 @@ install:
   #- sudo -H pip install --upgrade setuptools
   - sudo -H pip install pyinstaller
   #- sudo -H pip install cython
-  #- sudo -H pip install setuptools_scm
+  - sudo -H pip install setuptools_scm
   - sudo -H pip install --pre -U pyocd
   #- sudo -H pip install --pre -U git+https://github.com/mbedmicro/pyOCD.git#egg=proj
   #- cd .. && git clone https://github.com/gbishop/cython-hidapi.git && cd ubitflashtool
   #- cd ../cython-hidapi && python setup-mac.py build && cd ../ubitflashtool
   #- cd ../cython-hidapi && python setup-mac.py install && cd ../ubitflashtool
-  #- sudo -H python setup.py install
   - sudo -H pip install .
   
   # Check things were installed correctly
