--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,17 @@ install:
   - cd artifacts && sudo -H zip --symlinks -r ubitflashtool-gui.zip ubitflashtool-gui.app && cd ..
 
 script:
-  # First run this as a simple test to check ubitflashtool is not broken
+  - pipenv run flake8 ubitflashtool/
+  # Lastly just run it as a simple test to check ubitflashtool is not broken
   - ./artifacts/ubitflashtool-cli -s my_script.py
+
+after_script:
   # Upload built executables to a temporary service
   - curl --upload-file ./artifacts/ubitflashtool-gui.zip https://transfer.sh/ubitflashtool-gui.zip
   - curl --upload-file ./artifacts/ubitflashtool-cli https://transfer.sh/ubitflashtool-cli
   # - curl -F "file=@./artifacts/ubitflashtool-gui.zip" "https://file.io/?expires=3"
   # - curl -F "file=@./artifacts/ubitflashtool-cli" "https://file.io/?expires=3"
+
 notifications:
   email:
     on_success: change
