--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 IntelHex = ">=2.2.1"
 uflash = ">=1.1.0,<1.2.1"
 pyOCD = "==0.12.0"
+click = ">=7.0,<8.0"
 ubitflashtool = {path = "."}
 
 [dev-packages]
