Use the right cli command in CI scripts

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -56,7 +56,7 @@ test_script:
   - cmd: pipenv run flake8 ubitflashtool/ tests/
   - cmd: pipenv run python -m pytest -v --cov=ubitflashtool tests/
   # Lastly just run it as a simple test to check ubitflashtool is not broken
-  - cmd: .\artifacts\ubitflashtool-cli.exe -s my_script.py
+  - cmd: .\artifacts\ubitflashtool-cli.exe --help
 
 after_test:
   # Create AppVeyor artifact to be uploaded
